# claude-code-command-center

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
public/: index.html
public/css/: style.css
public/js/: analytics.js  app.js  dashboard.js  history.js  terminal.js
scripts/: hook-handler.py  setup.sh  uninstall.sh
server/: db.py  hooks.py  main.py  pr_lookup.py  sessions.py  terminal.py  watcher.py
server/routes/: api.py  ws.py
tests/e2e/: test_dashboard.py
tests/unit/: test_api.py  test_db.py  test_hooks.py  test_main.py  test_pr_lookup.py  test_terminal.py  test_watcher.py  test_ws.py
