[project]
name = "claude-code-command-center"
version = "0.1.0"
description = "A web-based command center for monitoring and managing Claude Code sessions"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "aiosqlite>=0.19.0",
    "watchfiles>=0.20.0",
    "websockets>=12.0",
    "pyte>=0.8.0",
    "uuid6>=2023.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "playwright>=1.40.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
